unpackaged/main/default/objects/Reciprocal__c/Reciprocal__c.object-meta.xml
<CustomObject>
    <label>Reciprocal</label>
    <nameField>
        <displayFormat>REC-{000}</displayFormat>
        <label>Reciprocal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reciprocals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>