unpackaged/main/default/objects/Reciprocal__c/fields/Amended_Charges_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Amended_Charges_Indicator__c</fullName>
    <label>Amended Charges Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>