unpackaged/main/default/objects/Reciprocal__c/fields/Associate_Id__c.field-meta.xml
<CustomField>
    <fullName>Associate_Id__c</fullName>
    <label>Associate ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>