unpackaged/main/default/objects/Reciprocal__c/fields/Blended_Rate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Blended_Rate_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blended Rate Indicator</label>
    <type>Checkbox</type>
</CustomField>