unpackaged/main/default/objects/Reciprocal__c/fields/Blended_Rate_Indicator_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Blended_Rate_Indicator_Outgoing__c</fullName>
    <description>Field for OUtgoing Reciprocal file to convert the TRUE/FALSE to Y/N</description>
    <formula>IF( Blended_Rate_Indicator__c = TRUE, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field for OUtgoing Reciprocal file to convert the TRUE/FALSE to Y/N</inlineHelpText>
    <label>Blended Rate Indicator Outgoing</label>
    <type>Text</type>
</CustomField>