unpackaged/main/default/objects/Reciprocal__c/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <label>Bonus (BON)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>