unpackaged/main/default/objects/Reciprocal__c/fields/Breakdown_Address__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Address__c</fullName>
    <label>Breakdown Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>