unpackaged/main/default/objects/Reciprocal__c/fields/Breakdown_City__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_City__c</fullName>
    <label>Breakdown City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>