unpackaged/main/default/objects/Reciprocal__c/fields/Breakdown_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Latitude__c</fullName>
    <label>Breakdown Latitude</label>
    <length>11</length>
    <type>Text</type>
</CustomField>