unpackaged/main/default/objects/Reciprocal__c/fields/Breakdown_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Longitude__c</fullName>
    <label>Breakdown Longitude</label>
    <length>11</length>
    <type>Text</type>
</CustomField>