unpackaged/main/default/objects/Reciprocal__c/fields/Breakdown_State__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_State__c</fullName>
    <label>Breakdown State/Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>