unpackaged/main/default/objects/Reciprocal__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reciprocals</relationshipLabel>
    <relationshipName>Reciprocals</relationshipName>
    <type>Lookup</type>
</CustomField>