unpackaged/main/default/objects/Reciprocal__c/fields/Charge_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Charge_Entitlements__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Charge Entitlements</label>
    <type>Checkbox</type>
</CustomField>