unpackaged/main/default/objects/Reciprocal__c/fields/Cost_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Cost_Buffer__c</fullName>
    <label>Cost Buffer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>