unpackaged/main/default/objects/Reciprocal__c/fields/Dispute_Code__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Code__c</fullName>
    <label>Dispute Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D0</fullName>
                <label>D0 - Multiple reasons</label>
            </value>
            <value>
                <fullName>D1</fullName>
                <label>D1 - This is not a PLRV Member</label>
            </value>
            <value>
                <fullName>D2</fullName>
                <label>D2 - This is not a Plus Member</label>
            </value>
            <value>
                <fullName>D3</fullName>
                <label>D3 - This is not a Premier Member</label>
            </value>
            <value>
                <fullName>D4</fullName>
                <label>D4 - Call was previously submitted</label>
            </value>
            <value>
                <fullName>D6</fullName>
                <label>D6 - Name does not match membership number</label>
            </value>
            <value>
                <fullName>D7</fullName>
                <label>D7 - Not our member</label>
            </value>
            <value>
                <fullName>D8</fullName>
                <label>D8 - Invalid membership number</label>
            </value>
            <value>
                <fullName>D9</fullName>
                <label>D9 - Service date is &gt; expiration</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>DC - Charges not validated per information</label>
            </value>
            <value>
                <fullName>DR</fullName>
                <label>DR - Resubmitted ticket</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>