unpackaged/main/default/objects/Reciprocal__c/fields/Dispute_Code_API__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Code_API__c</fullName>
    <description>This is the API name for the dispute code</description>
    <formula>TEXT ( Dispute_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispute Code API</label>
    <type>Text</type>
</CustomField>