unpackaged/main/default/objects/Reciprocal__c/fields/Error_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Error_Buffer__c</fullName>
    <label>Error Buffer</label>
    <length>190</length>
    <type>Text</type>
</CustomField>