unpackaged/main/default/objects/Reciprocal__c/fields/ERS_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>ERS_Payment_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERS Payment ID</label>
    <referenceTo>ERS_Payment__c</referenceTo>
    <relationshipLabel>Reciprocals</relationshipLabel>
    <relationshipName>Reciprocals</relationshipName>
    <type>Lookup</type>
</CustomField>