unpackaged/main/default/objects/Reciprocal__c/fields/Exported__c.field-meta.xml
<CustomField>
    <fullName>Exported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exported</label>
    <type>Checkbox</type>
</CustomField>