unpackaged/main/default/objects/Reciprocal__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Reciprocals</relationshipLabel>
    <relationshipName>Reciprocals</relationshipName>
    <type>Lookup</type>
</CustomField>