unpackaged/main/default/objects/Reciprocal__c/fields/Feedback_Id__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Id__c</fullName>
    <label>Feedback ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>