unpackaged/main/default/objects/Reciprocal__c/fields/Feedback_Time__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Time__c</fullName>
    <label>Feedback Time</label>
    <type>Date</type>
</CustomField>