unpackaged/main/default/objects/Reciprocal__c/fields/Is_Link_Batch_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Link_Batch_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field determines if the record has been processed by the linking of Service Contract / Feedback batch process.</inlineHelpText>
    <label>Is Link Batch Processed?</label>
    <type>Checkbox</type>
</CustomField>