unpackaged/main/default/objects/Reciprocal__c/fields/Long_Tow_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long Tow Indicator</label>
    <type>Checkbox</type>
</CustomField>