unpackaged/main/default/objects/Reciprocal__c/fields/Long_Tow_Indicator_Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Indicator_Outgoing__c</fullName>
    <description>This is for the Outgoing reciprocal file to have the Y/N format for the Long Tow Indicator</description>
    <formula>IF( Long_Tow_Indicator__c = TRUE, &quot;Y&quot;, &quot;N&quot;)</formula>
    <inlineHelpText>This is for the Outgoing reciprocal file to have the Y/N format for the Long Tow Indicator</inlineHelpText>
    <label>Long Tow Indicator Outgoing</label>
    <type>Text</type>
</CustomField>