unpackaged/main/default/objects/Reciprocal__c/fields/Long_Tow_Kms__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Kms__c</fullName>
    <label>Long Tow Kms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>