unpackaged/main/default/objects/Reciprocal__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reciprocals</relationshipLabel>
    <relationshipName>Reciprocals</relationshipName>
    <type>Lookup</type>
</CustomField>