unpackaged/main/default/objects/Reciprocal__c/fields/Member_ClubCode__c.field-meta.xml
<CustomField>
    <fullName>Member_ClubCode__c</fullName>
    <label>Member Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>