unpackaged/main/default/objects/Reciprocal__c/fields/Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_First_Name__c</fullName>
    <label>Member First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>