unpackaged/main/default/objects/Reciprocal__c/fields/Member_First_Name_Truncated__c.field-meta.xml
<CustomField>
    <fullName>Member_First_Name_Truncated__c</fullName>
    <description>Limited length to meet the restriction of 15 characters in Outgoing reciprocal file</description>
    <formula>TRIM(LEFT(Member_First_Name__c, 15))</formula>
    <inlineHelpText>Limited length to meet the restriction of 15 characters in Outgoing reciprocal file</inlineHelpText>
    <label>Member First Name Truncated</label>
    <type>Text</type>
</CustomField>