unpackaged/main/default/objects/Reciprocal__c/fields/Membership_Expiration_Date_MDY__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiration_Date_MDY__c</fullName>
    <description>This is the Membership Expiration Date compatible with Nationals RCB</description>
    <formula>IF( MONTH( Membership_Expiration_Date__c ) &lt; 10 , &#39;0&#39; &amp; TEXT(MONTH( Membership_Expiration_Date__c )), TEXT(MONTH( Membership_Expiration_Date__c ))) &amp; TEXT(DAY(  Membership_Expiration_Date__c )) &amp; TEXT( YEAR(  Membership_Expiration_Date__c  ))</formula>
    <label>Membership Expiration Date MDY</label>
    <type>Text</type>
</CustomField>