unpackaged/main/default/objects/Reciprocal__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAS</fullName>
            </value>
            <value>
                <fullName>PLUS</fullName>
            </value>
            <value>
                <fullName>PLRV</fullName>
            </value>
            <value>
                <fullName>PREM</fullName>
            </value>
            <value>
                <fullName>PRRV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>