unpackaged/main/default/objects/Reciprocal__c/fields/Miles_To_Scene__c.field-meta.xml
<CustomField>
    <fullName>Miles_To_Scene__c</fullName>
    <label>Miles To Scene</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>