unpackaged/main/default/objects/Reciprocal__c/fields/NameDateTroubleCode__c.field-meta.xml
<CustomField>
    <fullName>NameDateTroubleCode__c</fullName>
    <formula>Member_First_Name__c&amp;&#39;-&#39;&amp;Member_Last_Name__c&amp;&#39;-&#39;&amp;TEXT(Service_Call_Date__c)&amp;&#39;-&#39;&amp;TEXT( Service_Call_Trouble_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NameDateTroubleCode</label>
    <type>Text</type>
</CustomField>