unpackaged/main/default/objects/Reciprocal__c/fields/Outgoing_Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Reciprocal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outgoing Reciprocal</label>
    <referenceTo>Reciprocal__c</referenceTo>
    <relationshipLabel>Reciprocals</relationshipLabel>
    <relationshipName>Reciprocals</relationshipName>
    <type>Lookup</type>
</CustomField>