unpackaged/main/default/objects/Reciprocal__c/fields/Pacesetter_Dispatch_Code__c.field-meta.xml
<CustomField>
    <fullName>Pacesetter_Dispatch_Code__c</fullName>
    <label>Pacesetter Dispatch Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>