unpackaged/main/default/objects/Reciprocal__c/fields/Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code__c</fullName>
    <label>Problem Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P0 - Multiple reasons</fullName>
            </value>
            <value>
                <fullName>P1 - Total charges are either less than $5 or greater than $500</fullName>
            </value>
            <value>
                <fullName>P2 - Classic Member with Plus/RV/Premier charges</fullName>
            </value>
            <value>
                <fullName>P4 - Multiple records for same member/same day</fullName>
            </value>
            <value>
                <fullName>P5 - Overentitlements</fullName>
            </value>
            <value>
                <fullName>P6- Member Name doesnt match Number</fullName>
                <label>P6 - Member Name does not match Membership Number</label>
            </value>
            <value>
                <fullName>P8 - Invalid Membership Number</fullName>
            </value>
            <value>
                <fullName>P9 - Past Expiration Date</fullName>
            </value>
            <value>
                <fullName>PC - Authorization code missing from reciprocal record.</fullName>
            </value>
            <value>
                <fullName>PD - Authorization code missing from local call record.</fullName>
            </value>
            <value>
                <fullName>PE - Servicing club does not match authorization record.</fullName>
            </value>
            <value>
                <fullName>PF - Member ID does not match authorization record.</fullName>
            </value>
            <value>
                <fullName>PG - Member club does not match authorization record.</fullName>
            </value>
            <value>
                <fullName>PH - Feedback record does not exist.</fullName>
            </value>
            <value>
                <fullName>P6 - Name does not match member ID</fullName>
                <isActive>false</isActive>
                <label>P6 - Name does not match member ID</label>
            </value>
            <value>
                <fullName>P8 - Invalid Member ID</fullName>
                <isActive>false</isActive>
                <label>P8 - Invalid Member ID</label>
            </value>
            <value>
                <fullName>P9 - Service Date is after expiration date</fullName>
                <isActive>false</isActive>
                <label>P9 - Service Date is after expiration date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>