unpackaged/main/default/objects/Reciprocal__c/fields/Processor_ID__c.field-meta.xml
<CustomField>
    <fullName>Processor_ID__c</fullName>
    <label>Processor ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>