unpackaged/main/default/objects/Reciprocal__c/fields/Rider_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Rider_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rider Indicator</label>
    <type>Checkbox</type>
</CustomField>