unpackaged/main/default/objects/Reciprocal__c/fields/Service_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Date__c</fullName>
    <label>Service Call Date</label>
    <type>Date</type>
</CustomField>