unpackaged/main/default/objects/Reciprocal__c/fields/Service_Call_Date_MDY__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Date_MDY__c</fullName>
    <formula>IF( MONTH(Service_Call_Date__c) &lt; 10 , &#39;0&#39; &amp; TEXT(MONTH(Service_Call_Date__c)), TEXT(MONTH(Service_Call_Date__c)))   &amp;  TEXT(DAY( Service_Call_Date__c))  &amp;  TEXT( YEAR( Service_Call_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Call Date MDY</label>
    <type>Text</type>
</CustomField>