unpackaged/main/default/objects/Reciprocal__c/fields/Service_Call_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Date_Text__c</fullName>
    <label>Service Call Date (Text)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>