unpackaged/main/default/objects/Reciprocal__c/fields/Service_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_ID__c</fullName>
    <label>Service Call ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>