unpackaged/main/default/objects/Reciprocal__c/fields/Service_Call_Tow_Miles__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Tow_Miles__c</fullName>
    <label>Service Call Tow Miles</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>