unpackaged/main/default/objects/Reciprocal__c/fields/Service_Call_Trouble_Code_API__c.field-meta.xml
<CustomField>
    <fullName>Service_Call_Trouble_Code_API__c</fullName>
    <description>This is the API name for Service Call Trouble Code to returm just the 2-character code</description>
    <formula>TEXT (Service_Call_Trouble_Code__c)</formula>
    <inlineHelpText>Used in creating the report to extract Outgoing Reciprocals</inlineHelpText>
    <label>Service Call Trouble Code</label>
    <type>Text</type>
</CustomField>