unpackaged/main/default/objects/Reciprocal__c/fields/Service_Club_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Club_Code__c</fullName>
    <label>Service Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>