unpackaged/main/default/objects/Reciprocal__c/fields/Service_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_ID__c</fullName>
    <label>Service Facility ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>