unpackaged/main/default/objects/Reciprocal__c/fields/Service_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Type__c</fullName>
    <label>Service Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>