unpackaged/main/default/objects/Reciprocal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
            <value>
                <fullName>Rebilled</fullName>
            </value>
            <value>
                <fullName>Manually Billed</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Overturned Dispute</fullName>
            </value>
            <value>
                <fullName>Waiting on Club</fullName>
            </value>
            <value>
                <fullName>Hold For Next File</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>