unpackaged/main/default/objects/Reciprocal__c/fields/Submitting_Club_Code__c.field-meta.xml
<CustomField>
    <fullName>Submitting_Club_Code__c</fullName>
    <label>Submitting Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>