unpackaged/main/default/objects/Reciprocal__c/fields/Tax_Amount_TXT__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_TXT__c</fullName>
    <description>reciprocal tax amount conversion from dollars to text</description>
    <formula>IF(FIND(&#39;.&#39;, TEXT(Tax_Amount__c)) = 0,
TEXT(Tax_Amount__c) + &#39;.00&#39;,
(LEFT(TEXT(Tax_Amount__c), FIND(&#39;.&#39;, TEXT(Tax_Amount__c) ) ) ) +
RPAD(RIGHT(TEXT(Tax_Amount__c), LEN(TEXT(Tax_Amount__c)) - FIND(&#39;.&#39;, TEXT(Tax_Amount__c) ) ), 2, &#39;0&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>this field is a conversion of tax amount from dollars to text for use in reports</inlineHelpText>
    <label>Tax Amount TXT</label>
    <type>Text</type>
</CustomField>