unpackaged/main/default/objects/Reciprocal__c/fields/Total_Amount_TXT__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_TXT__c</fullName>
    <description>Field used to convert the total dollar amount from dollars to text</description>
    <formula>IF(FIND(&#39;.&#39;, TEXT(Total_Dollar_Amount__c)) = 0,
TEXT(Total_Dollar_Amount__c) + &#39;.00&#39;,
(LEFT(TEXT(Total_Dollar_Amount__c), FIND(&#39;.&#39;, TEXT(Total_Dollar_Amount__c) ) ) ) +
RPAD(RIGHT(TEXT(Total_Dollar_Amount__c), LEN(TEXT(Total_Dollar_Amount__c)) - FIND(&#39;.&#39;, TEXT(Total_Dollar_Amount__c) ) ), 2, &#39;0&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount TXT</label>
    <type>Text</type>
</CustomField>