unpackaged/main/default/objects/Reciprocal__c/fields/Total_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Dollar_Amount__c</fullName>
    <label>Total Dollar Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>