unpackaged/main/default/objects/Reciprocal__c/fields/Tow_Destination_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Tow_Destination_Longitude__c</fullName>
    <label>Tow Destination Longitude</label>
    <length>11</length>
    <type>Text</type>
</CustomField>