unpackaged/main/default/objects/Reciprocal__c/fields/Tow_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Tow_Geolocation__c</fullName>
    <label>Tow Geolocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>