unpackaged/main/default/objects/Reciprocal__c/fields/Towed_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Towed_to_Address__c</fullName>
    <label>Towed to Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>