unpackaged/main/default/objects/Reciprocal__c/fields/Towed_to_City__c.field-meta.xml
<CustomField>
    <fullName>Towed_to_City__c</fullName>
    <label>Towed to City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>