unpackaged/main/default/objects/Reciprocal__c/fields/Towed_to_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Towed_to_State_Province__c</fullName>
    <label>Towed to State/Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>