unpackaged/main/default/objects/Reciprocal__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>ACP</fullName>
            </value>
            <value>
                <fullName>ERR</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>