unpackaged/main/default/objects/Reciprocal__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>