unpackaged/main/default/objects/Reciprocal__c/recordTypes/Approval.recordType-meta.xml
<RecordType>
    <fullName>Approval</fullName>
    <active>true</active>
    <label>Approval</label>
</RecordType>