unpackaged/main/default/objects/Reciprocal__c/recordTypes/ERS_Auth.recordType-meta.xml
<RecordType>
    <fullName>ERS_Auth</fullName>
    <active>true</active>
    <description>Default record type for ERS Auth</description>
    <label>ERS_Auth</label>
</RecordType>