unpackaged/main/default/objects/Reciprocal__c/recordTypes/Inbound_Payment_Requests.recordType-meta.xml
<RecordType>
    <fullName>Inbound_Payment_Requests</fullName>
    <active>true</active>
    <label>Inbound Payment Requests</label>
</RecordType>