unpackaged/main/default/objects/Reciprocal__c/recordTypes/Outbound_Payment_Requests.recordType-meta.xml
<RecordType>
    <fullName>Outbound_Payment_Requests</fullName>
    <active>true</active>
    <label>Outbound Payment Requests</label>
</RecordType>