unpackaged/main/default/objects/Reciprocal__c/validationRules/Enter_Dispute_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Dispute_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&#39;Disputed&#39; ),ISPICKVAL(Dispute_Code__c,&#39;&#39;))</errorConditionFormula>
    <errorMessage>Please enter the dispute code</errorMessage>
</ValidationRule>